--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section id="home">
         <div class="main">
-            <h1 class="headings'">I AM <br>Satyam Thakur</h1>
+            <h1 class="headings'">I AM <br>Vishwajeet Mandal</h1>
             <button class="btn"> hire Me</button>
         </div>
     </section>
@@ -30,8 +30,8 @@
         <div id="pic">
             <img src="image2.jpg" alt="">
             <div id="intro">
-                <h2>Satyam Thakur </h2>
-                <p>I'm currently pursuing my undergrad btech degree at GH RAISONI COLLEGE OF ENGINEERING . Eager to use my skills in web developing field
+                <h2> Vishwajeet Mandal </h2>
+                <p>I'm currently pursuing my undergrad btech degree at Sandip Institute of Technology and Research Center . Eager to use my skills in web developing field
  and to acquire more new information. I was astonished by the work of engineers since my childhoood and their contributions to digital industries 
 and I'm passionate to work as a professional in web developing field as it would make me skillful not only in developing feild also in working 
 society too. I will improve my skills to become better employee in future.
@@ -78,11 +78,11 @@ society too. I will improve my skills to become better employee in future.
         <div class=""content>
             <h3 class="title">CONTACT INFO : </h3>
             <div class=""info>
-                <h3><i class="fas fa-envelope"></i>Email: satyam.thakur.cse@ghrce.raisoni.net</h3>
+                <h3><i class="fas fa-envelope"></i>Email: vishmandal2003@gmail.com </h3>
                 <h3>******************************</h3>
-                <h3><i class="fas fa-phone"></i>Phone: +8600989091</h3>
+                <h3><i class="fas fa-phone"></i>Phone: +919511243654</h3>
                 <h3>******************************</h3>
-                <h3><i class="fas fa-map-marker-alt"></i>Location: Nagpur, Maharashtra, India </h3>
+                <h3><i class="fas fa-map-marker-alt"></i>Location: Nashik, Maharashtra, India </h3>
                 <h3>******************************</h3>
             </div>
         </div>
